--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: ui-sans-serif, system-ui, sans-serif, Apple Color Emoji,
+    Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   line-height: 1.5;
   font-weight: 400;
 
@@ -59,6 +60,31 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+input {
+  background-color: inherit;
+
+  border: 1px solid #c2c8d0;
+  border-radius: 8px;
+  padding: 8px 10px;
+
+  min-width: 250px;
+  max-width: 500px;
+
+  font-size: 1em;
+}
+
+input[type="password"] {
+  letter-spacing: 0.125em;
+}
+
+label {
+  align-self: flex-start;
+
+  margin-bottom: 5px;
+
+  font-size: 1em;
 }
 
 @media (prefers-color-scheme: light) {
