Create reusable form component

--- a/src/components/Form/FormComponents/Inputs/PasswordInput/PasswordInput.module.css
+++ b/src/components/Form/FormComponents/Inputs/PasswordInput/PasswordInput.module.css
@@ -1,6 +1,5 @@
 .passwordInputFormRow {
-  display: flex;
-  flex-direction: column;
+  composes: inputFormRow from "../Input.module.css";
 }
 
 .passwordInputContainer {
