--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -3,4 +3,14 @@
   flex-direction: column;
 
   align-items: center;
+
+  gap: 20px;
+
+  margin-top: 40px;
+}
+
+.submitBtn {
+  width: 100%;
+
+  margin-top: 10px;
 }
