Add floating-ui for post action prompts

--- a/src/components/App/Posts/PostsComponents/Post/Post.module.css
+++ b/src/components/App/Posts/PostsComponents/Post/Post.module.css
@@ -97,7 +97,8 @@
   width: 40px;
 }
 
-.postActions > button:hover {
+.postActions > button:hover,
+.dialogActions > button:hover {
   border-color: #6b6fc9;
 }
 
